src/components/profile-page/styles.scss
@import "../../utilities/variables";

.profile-page {
  position: relative;
  top: 10%;
  display: flex;
  flex-direction: column;
  align-items: center;

  .profile-image-and-uploader {
    .profile-picture {
      margin-bottom: 15px;
      border-radius: 100%;
      max-height: 165px;
      min-width: 165px;
    }

    .upload-icon {
      display: flex;
      align-items: center;
      justify-content: center;
      position: relative;
      top: -57px;
      right: -120px;
      border-radius: 22px;
      width: 40px;
      height: 40px;
      color: white;
      background-color: darkgrey;
      cursor: pointer;

      &:hover {
        color: $coolpurp;
      }
    }
  }

  .username {
    margin-bottom: 10px;
  }

  .email {
    margin-bottom: 10px;
  }

  .stat {
    margin-bottom: 8px;

    .stat-title {
      font-weight: 600;
    }
  }
}

